--- a/module3/ch5.ipynb
+++ b/module3/ch5.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101\n"
+      "161\n"
      ]
     }
    ],
@@ -27,46 +27,317 @@
     "import random\n",
     "\n",
     "random_number = random.randint(99, 199)\n",
-    "print(random_number)"
+    "print(random_number)\n",
+    "number_list = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180\n",
-      "181\n",
-      "136\n",
+      "131\n",
+      "129\n",
+      "102\n",
+      "191\n",
+      "143\n",
+      "185\n",
+      "129\n",
+      "149\n",
+      "135\n",
+      "110\n",
       "166\n",
-      "178\n",
-      "150\n",
-      "171\n",
-      "140\n",
-      "189\n",
-      "189\n",
-      "137\n",
-      "167\n",
-      "142\n",
-      "106\n",
-      "199\n",
-      "104\n",
-      "104\n",
-      "187\n",
-      "189\n"
+      "160\n",
+      "139\n",
+      "126\n",
+      "159\n",
+      "124\n",
+      "134\n",
+      "129\n",
+      "112\n",
+      "99 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "176 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "128 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "103 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "139 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "186 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "192 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "101 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "147  is divisble by 7.\n",
+      "148 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "148 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "126  is divisble by 7.\n",
+      "154  is divisble by 7.\n",
+      "104 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "112  is divisble by 7.\n",
+      "190 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "106 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "184 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "178 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "123 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "152 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "190 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "175  is divisble by 7.\n",
+      "119  is divisble by 7.\n",
+      "149 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "105  is divisble by 7.\n",
+      "177 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "108 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "115 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "189  is divisble by 7.\n",
+      "147  is divisble by 7.\n",
+      "198 is not divisible by 7.\n",
+      "203 is the next number divisible by 7.\n",
+      "133  is divisble by 7.\n",
+      "124 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "100 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "126  is divisble by 7.\n",
+      "109 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "115 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "162 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n",
+      "105  is divisble by 7.\n",
+      "187 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "146 is not divisible by 7.\n",
+      "147 is the next number divisible by 7.\n",
+      "122 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "161  is divisble by 7.\n",
+      "117 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "167 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n",
+      "159 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "121 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "136 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "190 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "154  is divisble by 7.\n",
+      "99 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "158 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "109 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "154  is divisble by 7.\n",
+      "142 is not divisible by 7.\n",
+      "147 is the next number divisible by 7.\n",
+      "126  is divisble by 7.\n",
+      "158 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "170 is not divisible by 7.\n",
+      "175 is the next number divisible by 7.\n",
+      "158 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "131 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "130 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "192 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "130 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "158 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "197 is not divisible by 7.\n",
+      "203 is the next number divisible by 7.\n",
+      "179 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "150 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "123 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "185 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "180 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "166 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n",
+      "111 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "176 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "116 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "126  is divisble by 7.\n",
+      "137 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "125 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "198 is not divisible by 7.\n",
+      "203 is the next number divisible by 7.\n",
+      "110 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "139 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "186 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "125 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "188 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "134 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "173 is not divisible by 7.\n",
+      "175 is the next number divisible by 7.\n",
+      "145 is not divisible by 7.\n",
+      "147 is the next number divisible by 7.\n",
+      "192 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "137 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "184 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "119  is divisble by 7.\n",
+      "172 is not divisible by 7.\n",
+      "175 is the next number divisible by 7.\n",
+      "118 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "147  is divisble by 7.\n",
+      "176 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "159 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "147  is divisble by 7.\n",
+      "136 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "143 is not divisible by 7.\n",
+      "147 is the next number divisible by 7.\n",
+      "166 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n",
+      "199 is not divisible by 7.\n",
+      "203 is the next number divisible by 7.\n",
+      "114 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "100 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "129 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "135 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "184 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "106 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "176 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "128 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "180 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "140  is divisble by 7.\n",
+      "118 is not divisible by 7.\n",
+      "119 is the next number divisible by 7.\n",
+      "183 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "105  is divisble by 7.\n",
+      "131 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "129 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "102 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "191 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "143 is not divisible by 7.\n",
+      "147 is the next number divisible by 7.\n",
+      "185 is not divisible by 7.\n",
+      "189 is the next number divisible by 7.\n",
+      "129 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "149 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "135 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "110 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "166 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n",
+      "160 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "139 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "126  is divisble by 7.\n",
+      "159 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "124 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "134 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "129 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "112  is divisble by 7.\n"
      ]
     }
    ],
    "source": [
     "for i in range(1, 20):\n",
     "    random_number = random.randint(99, 199)\n",
+    "    number_list.append(random_number)\n",
     "    print(random_number)\n",
-    "\n"
+    "\n",
+    "def is_divisible_by_seven(num):\n",
+    "    for n in num:\n",
+    "        if n % 7 == 0:\n",
+    "            print(n, \" is divisble by 7.\")\n",
+    "        else:\n",
+    "            print(n, \"is not divisible by 7.\")\n",
+    "            x = n\n",
+    "            while x % 7 != 0:\n",
+    "                x += 1\n",
+    "            print(x, \"is the next number divisible by 7.\")\n",
+    "\n",
+    "\n",
+    "is_divisible_by_seven(number_list)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
