--- a/module3/ch5.ipynb
+++ b/module3/ch5.ipynb
@@ -27,7 +27,7 @@
     "import random\n",
     "\n",
     "random_number = random.randint(99, 199)\n",
-    "print(random_number)\n",
+    "# print(random_number)\n",
     "number_list = []"
    ]
   },
@@ -308,7 +308,7 @@
     "for i in range(1, 20):\n",
     "    random_number = random.randint(99, 199)\n",
     "    number_list.append(random_number)\n",
-    "    print(random_number)\n",
+    "    # print(random_number)\n",
     "\n",
     "def is_divisible_by_seven(num):\n",
     "    for n in num:\n",
