--- a/module3/ch5.ipynb
+++ b/module3/ch5.ipynb
@@ -33,32 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "131\n",
-      "129\n",
-      "102\n",
-      "191\n",
-      "143\n",
-      "185\n",
-      "129\n",
-      "149\n",
-      "135\n",
-      "110\n",
-      "166\n",
-      "160\n",
-      "139\n",
-      "126\n",
-      "159\n",
-      "124\n",
-      "134\n",
-      "129\n",
-      "112\n",
       "99 is not divisible by 7.\n",
       "105 is the next number divisible by 7.\n",
       "176 is not divisible by 7.\n",
@@ -300,7 +281,43 @@
       "140 is the next number divisible by 7.\n",
       "129 is not divisible by 7.\n",
       "133 is the next number divisible by 7.\n",
-      "112  is divisble by 7.\n"
+      "112  is divisble by 7.\n",
+      "128 is not divisible by 7.\n",
+      "133 is the next number divisible by 7.\n",
+      "106 is not divisible by 7.\n",
+      "112 is the next number divisible by 7.\n",
+      "134 is not divisible by 7.\n",
+      "140 is the next number divisible by 7.\n",
+      "182  is divisble by 7.\n",
+      "164 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n",
+      "149 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "100 is not divisible by 7.\n",
+      "105 is the next number divisible by 7.\n",
+      "120 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "180 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "193 is not divisible by 7.\n",
+      "196 is the next number divisible by 7.\n",
+      "170 is not divisible by 7.\n",
+      "175 is the next number divisible by 7.\n",
+      "169 is not divisible by 7.\n",
+      "175 is the next number divisible by 7.\n",
+      "155 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "159 is not divisible by 7.\n",
+      "161 is the next number divisible by 7.\n",
+      "154  is divisble by 7.\n",
+      "177 is not divisible by 7.\n",
+      "182 is the next number divisible by 7.\n",
+      "153 is not divisible by 7.\n",
+      "154 is the next number divisible by 7.\n",
+      "120 is not divisible by 7.\n",
+      "126 is the next number divisible by 7.\n",
+      "166 is not divisible by 7.\n",
+      "168 is the next number divisible by 7.\n"
      ]
     }
    ],
